@@ -1,0 +1,13 @@
+package net.ttddyy.dsproxy.proxy;
+
+/**
+ * Factory to create {@link Stopwatch}.
+ *
+ * @author Tadaya Tsuyukubo
+ * @since 1.6
+ */
+public interface StopwatchFactory {
+
+    Stopwatch create();
+
+}
