@@ -4,4 +4,14 @@
 * Add custom value store on `ExecutionInfo` and `MethodExecutionContext`
   Mainly used for passing values between before and after listener callback.
 
+* `Stopwatch` and `StopwatchFactory` are added for elapsed time calculation.  +
+ Elapsed time calculation for query(`ExecutionInfo#getElapsedTime`) and method(`MethodExecutionContext.getElapsedTime()`)
+ have been updated to use `Stopwatch` class.  +
+ `Stopwatch` is created by `StopwatchFactory`, and it is configurable in `ProxyConfig`.  +
+ Two implementation classes are available - `SystemStopwatchFactory` which creates `SystemStopwatch` and
+ `NanoTimeStopwatchFactory` which creates `NanoTimeStopwatch`.  +
+ `SystemStopwatch` uses `System.currentTimeMillis()` and `NanoTimeStopwatch` uses `System.nanoTime()` to calculate
+ elapsed time. Default is set to `SystemStopwatchFactory`.
 
+NOTE: `SlowQueryListener` needs to set `StopwatchFactory` independently from `ProxyConfig` in order to calculate
+`ExecutionInfo#getElapsedTime()` for running slow queries.
